# XTransfer

./: .gitignore  README.md  pyproject.toml  run.py  validate_all.py
configs/: hhar_single.yaml
dataloader/: __init__.py  dataset.py  transforms.py
dataloader/few_shot/: __init__.py  additional_transforms.py  datamgr.py  dataset.py  feature_loader.py
dataloader/sensing_loader/: datamgr.py
dataloader/target_loader/: datamgr.py
modeling/: __init__.py
modeling/backbone/: __init__.py  backbone.py  build.py  conv.py  conv1d.py  hhar_model.py  resnet.py  resnet1d.py
modeling/head/: __init__.py  build.py  header.py  mlp.py
utils/: ResourceProfile.py  __init__.py  data_tools.py  logger.py  meters.py  registry.py  tools.py  torch_quaternion.py  torchtools.py  training_logger.py
xtransfer/: core.py  encoder.py  engine.py  hook.py  metric_losses.py  model_builder.py  paths.py  sampling_losses.py  target_datasets.py  tools.py  train.py  trans.py
xtransfer/config/: __init__.py  defaults.py  match.json  named_struc.json  struc.json
xtransfer/evaluation/: __init__.py  evaluator.py
xtransfer/pytorch_trainer/: __init__.py  decorators.py  early_stopping.py  gt_trainer.py  model_checkpoint.py  model_summary.py  module.py  trainer.py
xtransfer/torch_pruning/: __init__.py  dependency.py  helpers.py  importance.py  metric.py  strategy.py  utils.py
xtransfer/torch_pruning/functional/: __init__.py  structured.py  unstructured.py
xtransfer/torch_pruning/pruner/: __init__.py  basepruner.py  batchnorm_scale_pruner.py  magnitude_based_pruner.py  structural_reg_pruner.py  (+1 more)
(+2 files in other folders)
